log
Thu 04 May 2023 01:23:30 AM UTC: 
 tests:  0|5
total_score: 0/70
0ebf4fb
Thu 04 May 2023 01:29:44 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:19: error: unused variable ‘nodito’ [-Werror=unused-variable]
   61 |             Node* nodito = createNode();
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a65407
Thu 04 May 2023 01:36:03 AM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
5d12cf2
Thu 04 May 2023 01:36:18 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:10: error: ‘j’ undeclared (first use in this function)
   69 |       if(j!=9) break;
      |          ^
sudoku.c:69:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d185245
Thu 04 May 2023 01:37:41 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:10: error: ‘j’ undeclared (first use in this function)
   70 |       if(j !=9) break;
      |          ^
sudoku.c:70:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9995160
Thu 04 May 2023 01:41:40 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
279015f
Thu 04 May 2023 01:42:08 AM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
1661bc5
Thu 04 May 2023 01:49:02 AM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
afc1379
Thu 04 May 2023 01:52:47 AM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
997b704
Thu 04 May 2023 01:52:55 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
e671e4c
Thu 04 May 2023 01:53:26 AM UTC: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
19a656d
Thu 04 May 2023 01:53:37 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
06dc285
Thu 04 May 2023 01:55:21 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ae27665
Thu 04 May 2023 01:56:27 AM UTC: 
 sudoku.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
12a2b5c
Thu 04 May 2023 01:56:43 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
2920610
Thu 04 May 2023 01:57:59 AM UTC: 
 sudoku.c | 54 ++----------------------------------------------------
 1 file changed, 2 insertions(+), 52 deletions(-)
 tests:  2|4
total_score: 15/70
6f1c755
Thu 04 May 2023 01:58:41 AM UTC: 
 sudoku.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
f988446
Thu 04 May 2023 01:58:57 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ad1095f
Thu 04 May 2023 01:59:31 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8e5bbb0
Thu 04 May 2023 01:59:51 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
95a0074
Thu 04 May 2023 02:00:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
345d169
Thu 04 May 2023 02:01:52 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
536c1c9
Thu 04 May 2023 02:03:30 AM UTC: 
 sudoku.c | 25 +++++++++++++++----------
 1 file changed, 15 insertions(+), 10 deletions(-)
 tests:  5|3
total_score: 35/70
22a0e61
Thu 04 May 2023 02:04:31 AM UTC: 
 sudoku.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
ff8bc75
Thu 04 May 2023 02:08:24 AM UTC: 
 sudoku.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
33cfb91
Thu 04 May 2023 02:14:47 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|3
total_score: 35/70
0809a7c
Thu 04 May 2023 02:16:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
037a6c1
Thu 04 May 2023 02:20:07 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
79f5177
Thu 04 May 2023 02:20:28 AM UTC: 
 sudoku.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
5afc772
Thu 04 May 2023 02:25:44 AM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c9fa4ff
Thu 04 May 2023 02:26:57 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
cdf418c
Thu 04 May 2023 02:27:09 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
6879b7a
Thu 04 May 2023 02:27:39 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d73f995
Thu 04 May 2023 02:29:58 AM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
38f6dbe
Thu 04 May 2023 02:33:51 AM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
da0840b
Thu 04 May 2023 05:09:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
61f8a1c
Thu 04 May 2023 05:11:03 PM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
8998371
Thu 04 May 2023 05:14:16 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
de77583
Thu 04 May 2023 05:14:37 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
683d004
Thu 04 May 2023 05:14:53 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
534f3bb
Thu 04 May 2023 05:17:13 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
6d99a82
Thu 04 May 2023 05:17:24 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
97cc052
Thu 04 May 2023 05:17:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
45b06e0
Thu 04 May 2023 05:17:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
1bbe2bf
Thu 04 May 2023 05:18:19 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7081081
Thu 04 May 2023 05:18:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
355ad65
